--- a/restaurant/src/main/resources/templates/client/deskPage.html
+++ b/restaurant/src/main/resources/templates/client/deskPage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8" http-equiv="refresh" content="15">
-    <title>Table Page</title>
+    <title>桌位页面</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -91,7 +91,7 @@
 <body class="layui-layout-body">
     <div class="layui-card nav">
         <div class="title">
-            Please choose the table
+            请选择当前桌位
         </div>
     </div>
     <div class="con">
@@ -100,33 +100,33 @@
                 <th:block th:if="${desk.idleStatus}==0">
                     <div class="desk color1 click" style="text-align:center;">
                         <input type="hidden" name="deskId" th:value="${desk.deskId}">
-                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>People</span></div>
+                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>人/桌</span></div>
                         <div class="desk_code" th:text="${desk.deskCode}"></div>
                         <div class="statue">
                             <input type="hidden" th:value="${desk.idleStatus}">
-                            --Available
+                            空台
                         </div>
                     </div>
                 </th:block>
                 <th:block th:if="${desk.idleStatus}==1">
                     <div class="desk color2 click" style="text-align:center;">
                         <input type="hidden" name="deskId" th:value="${desk.deskId}">
-                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>People</span></div>
+                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>人/桌</span></div>
                         <div class="desk_code" th:text="${desk.deskCode}"></div>
                         <div class="statue">
                             <input type="hidden" th:value="${desk.idleStatus}">
-                            Dining
+                            就餐中
                         </div>
                     </div>
                 </th:block>
                 <th:block th:if="${desk.idleStatus}==2">
                     <div class="desk color3 click" style="text-align:center;">
                         <input type="hidden" name="deskId" th:value="${desk.deskId}">
-                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>People</span></div>
+                        <div class="people"><span th:text="${desk.peopleCount}"></span><span>人/桌</span></div>
                         <div class="desk_code" th:text="${desk.deskCode}"></div>
                         <div class="statue">
                             <input type="hidden" th:value="${desk.idleStatus}">
-                            --Cleaning
+                            待清理
                         </div>
                     </div>
                 </th:block>
@@ -160,7 +160,7 @@
                 },
                 success:function (res) {
                     if(res.code==200){
-                        layer.msg("Login success!");
+                        layer.msg("登录成功");
                         location = "/restaurant/guest/main.html";
                     }else{
                         layer.msg(res.msg,{icon:5});
@@ -168,7 +168,7 @@
                 }
             });
           }else{
-              layer.msg("NOT AVAILABLE!",{icon:5});
+              layer.msg("非空闲状态,不能选择！",{icon:5});
           }
         });
         //调用分页
