--- a/restaurant/src/main/resources/templates/desk/edit.html
+++ b/restaurant/src/main/resources/templates/desk/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add a Table (Edit)</title>
+    <title>添加餐桌</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -20,39 +20,39 @@
                 <div class="layui-input-inline layui-hide">
                     <input type="text" name="deskId" th:value="${desk.deskId}" autocomplete="off" class="layui-input">
                 </div>
-                <label class="layui-form-label">Table No.</label>
+                <label class="layui-form-label">桌位编号</label>
                 <div class="layui-input-block">
                     <input type="text" th:value="${desk.deskCode}" name="deskCode" id="deskCode" lay-verify="required"
-                           placeholder="Number"
+                           placeholder="桌位编号"
                            autocomplete="off"
                            class="layui-input">
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">Status</label>
+                <label class="layui-form-label">餐桌状态</label>
                 <div class="layui-input-block">
                     <th:block th:if="${desk.idleStatus}==0">
-                        <input type="radio" name="idleStatus" value="0" title="Available" checked>
-                        <input type="radio" name="idleStatus" value="1" title="Not Available">
-                        <input type="radio" name="idleStatus" value="2" title="Cleaning">
+                        <input type="radio" name="idleStatus" value="0" title="空闲" checked>
+                        <input type="radio" name="idleStatus" value="1" title="有人">
+                        <input type="radio" name="idleStatus" value="2" title="待清理">
                     </th:block>
                     <th:block th:if="${desk.idleStatus}==1">
-                        <input type="radio" name="idleStatus" value="0" title="Available">
-                        <input type="radio" name="idleStatus" value="1" title="Not Available" checked>
-                        <input type="radio" name="idleStatus" value="2" title="Cleaning">
+                        <input type="radio" name="idleStatus" value="0" title="空闲">
+                        <input type="radio" name="idleStatus" value="1" title="有人" checked>
+                        <input type="radio" name="idleStatus" value="2" title="待清理">
                     </th:block>
                     <th:block th:if="${desk.idleStatus}==2">
-                        <input type="radio" name="idleStatus" value="0" title="Available">
-                        <input type="radio" name="idleStatus" value="1" title="Not Available">
-                        <input type="radio" name="idleStatus" value="2" title="Cleaning" checked>
+                        <input type="radio" name="idleStatus" value="0" title="空闲">
+                        <input type="radio" name="idleStatus" value="1" title="有人">
+                        <input type="radio" name="idleStatus" value="2" title="待清理" checked>
                     </th:block>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">People</label>
+                <label class="layui-form-label">座位人数</label>
                 <div class="layui-input-block">
                     <input type="text" th:value="${desk.peopleCount}" name="peopleCount" id="peopleCount" lay-verify="required|number|int_number"
-                           placeholder="No. of People"
+                           placeholder="座位人数"
                            autocomplete="off"
                            class="layui-input">
                 </div>
