--- a/restaurant/src/main/resources/templates/home/console.html
+++ b/restaurant/src/main/resources/templates/home/console.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <title>Restaurant order system</title>
+    <title>餐厅点餐系统</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -23,19 +23,19 @@
                             <div class="layui-carousel layadmin-carousel layadmin-dataview">
                                 <div carousel-item>
                                     <div id="customerFlowChart">
-                                        Today customer flow chart
+                                        今日客流量面积图
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="layui-card">
-                        <div class="layui-card-header">Member statistics</div>
+                        <div class="layui-card-header">会员统计</div>
                         <div class="layui-card-body">
                             <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade">
                                 <div carousel-item>
-                                    <div id="memberAddChart" style="width: 810px">Member growth line chart</div>
-                                    <div id="memberCategoryRate" style="width: 810px">Member Type Ratio Pie Chart</div>
+                                    <div id="memberAddChart" style="width: 810px">会员增长量折线图</div>
+                                    <div id="memberCategoryRate" style="width: 810px">会员类型比率饼图</div>
                                 </div>
                             </div>
 
