--- a/restaurant/src/main/resources/templates/member/edit.html
+++ b/restaurant/src/main/resources/templates/member/edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Edit member</title>
+    <title>编辑会员</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
 </head>
@@ -18,14 +18,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Name</label>
+                        <label class="layui-form-label">姓名</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${member.name}" name="name" lay-verify="required" placeholder=""
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Member type</label>
+                        <label class="layui-form-label">会员类型</label>
                         <div class="layui-input-block">
                             <select name="mcId" disabled>
                                 <th:block th:each="memberCategory:${memberCategoryList}">
@@ -45,14 +45,14 @@
                 <div class="layui-form-item">
                     <div class="layui-row layui-col-space15">
                         <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                            <label class="layui-form-label">Phone</label>
+                            <label class="layui-form-label">电话</label>
                             <div class="layui-input-block">
                                 <input type="text" th:value="${member.phone}" name="phone" lay-verify="required|phone"
                                        placeholder="" autocomplete="off" class="layui-input">
                             </div>
                         </div>
                         <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                            <label class="layui-form-label">Birth</label>
+                            <label class="layui-form-label">生日</label>
                             <div class="layui-input-block">
                                 <input type="text" th:value="${birthday}" id="birthday" name="birthday"
                                        lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
@@ -67,15 +67,15 @@
                     </div>
                     <div class="layui-row layui-col-space15">
                         <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                            <label class="layui-form-label">Sex</label>
+                            <label class="layui-form-label">性别</label>
                             <div class="layui-input-block">
-                                <th:block th:if="${member.gender} eq 'Male'">
-                                    <input type="radio" name="gender" value="Male" title="Male" checked>
-                                    <input type="radio" name="gender" value="Female" title="Female">
+                                <th:block th:if="${member.gender} eq '男'">
+                                    <input type="radio" name="gender" value="男" title="男" checked>
+                                    <input type="radio" name="gender" value="女" title="女">
                                 </th:block>
-                                <th:block th:if="${member.gender} eq 'Female'">
-                                    <input type="radio" name="gender" value="Male" title="Male">
-                                    <input type="radio" name="gender" value="Female" title="女=Female" checked>
+                                <th:block th:if="${member.gender} eq '女'">
+                                    <input type="radio" name="gender" value="男" title="男">
+                                    <input type="radio" name="gender" value="女" title="女" checked>
                                 </th:block>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit" id="LAY-user-front-submit"
-                       value="Confirm">
+                       value="确认">
             </div>
         </form>
     </div>
