--- a/restaurant/src/main/resources/templates/membercategory/add.html
+++ b/restaurant/src/main/resources/templates/membercategory/add.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add member type</title>
+    <title>添加会员类型</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -37,7 +37,7 @@
         <form class="layui-form layui-form-pane" action="" lay-filter="component-form-element">
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">Catagory name</label>
+                    <label class="layui-form-label">类型名称</label>
                     <div class="layui-inline">
                         <input type="text" name="mcName" lay-verify="required" placeholder="" autocomplete="off"
                                class="layui-input">
@@ -46,7 +46,7 @@
             </div>
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">Discount</label>
+                    <label class="layui-form-label">享有折扣</label>
                     <div class="layui-inline">
                         <div class="layui-btn-group">
                             <a class="layui-btn" id="btn_minus">
@@ -63,7 +63,7 @@
             </div>
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">Amount condition</label>
+                    <label class="layui-form-label">金额条件</label>
                     <div class="layui-inline">
                         <input type="text" name="amount" lay-verify="required|number|positive_number" placeholder=""
                                autocomplete="off" class="layui-input">
@@ -72,7 +72,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit" id="LAY-user-front-submit"
-                       value="Confirm">
+                       value="确认">
             </div>
         </form>
     </div>
@@ -93,7 +93,7 @@
             //验证正数
             positive_number: function (value, item) {
                 if (parseFloat(value) < 0) {
-                    return 'Amount cannot be negative';
+                    return '金额不能为负';
                 }
             },
         });
