--- a/restaurant/src/main/resources/templates/membercategory/list.html
+++ b/restaurant/src/main/resources/templates/membercategory/list.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Member type chart</title>
+    <title>会员类型表</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../static/layuiadmin/layui/css/layui.css"
           media="all"/>
     <link rel="stylesheet" th:href="@{/layuiadmin/style/admin.css}" href="../static/layuiadmin/layui/css/layui.css"
@@ -31,8 +31,8 @@
             <table id="tableList" lay-filter="tableList"></table>
             <!--右边工具栏-->
             <script type="text/html" id="barDemo">
-                <a class="layui-btn layui-btn-xs" lay-event="edit">Edit</a>
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
             </script>
         </div>
     </div>
@@ -49,7 +49,7 @@
                 elem: '#tableList'
                 , url: "/restaurant/membercategory/list.do" //数据接口
                 , method: 'post'
-                , title: 'Member type chart'
+                , title: '会员类型表'
                 , response: {
                     statusCode: 200
                 }
@@ -59,12 +59,12 @@
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'mcId', title: 'ID',align:'center', cellMinWidth: 80, sort: true, fixed: 'left',hide:true}
-                    , {field: 'mcName', title: 'Type name',align:'center', cellMinWidth: 150}
-                    , {field: 'discount', title: 'Discount',align:'center', cellMinWidth: 80, sort: true}
-                    , {field: 'amount', title: 'Consumption Amount Conditions',align:'center',templet: '<div>{{d.amount}}<span>元</span></div>', cellMinWidth: 60, sort: true}
-                    , {field: 'createTime', title: 'Create time', cellMinWidth: 150,sort: true}
-                    , {field: 'modifyTime', title: 'Edit time', cellMinWidth: 150,sort: true}
-                    , {fixed: 'right', title: "Toolbar",align:'center', width: 180, toolbar: '#barDemo'}
+                    , {field: 'mcName', title: '类型名',align:'center', cellMinWidth: 150}
+                    , {field: 'discount', title: '享有折扣',align:'center', cellMinWidth: 80, sort: true}
+                    , {field: 'amount', title: '消费金额条件',align:'center',templet: '<div>{{d.amount}}<span>元</span></div>', cellMinWidth: 60, sort: true}
+                    , {field: 'createTime', title: '创建时间', cellMinWidth: 150,sort: true}
+                    , {field: 'modifyTime', title: '修改时间', cellMinWidth: 150,sort: true}
+                    , {fixed: 'right', title: "工具栏",align:'center', width: 180, toolbar: '#barDemo'}
                 ]]
             });
 
@@ -76,11 +76,11 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: 'Add member type'
+                            ,title: '添加会员类型'
                             ,content: '/restaurant/membercategory/add.html'
                             ,maxmin: true
                             ,area: ['500px', '340px']
-                            ,btn: ['Confirm', 'Cancel']
+                            ,btn: ['确定', '取消']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -102,7 +102,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit result'
+                                                    title: '提交结果'
                                                     ,anim: 6
                                                 });
                                             }
@@ -115,19 +115,19 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('Please select a row');
+                            layer.msg('请选择一行');
                         } else if (data.length > 1) {
-                            layer.msg('only can edit once');
+                            layer.msg('只能同时编辑一个');
                         } else {
                             var mcId = checkStatus.data[0].mcId;
                             var url = '/restaurant/membercategory/edit.html/'+mcId;
                             layer.open({
                                 type: 2
-                                ,title: 'Edit member type'
+                                ,title: '编辑会员类型'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['500px', '340px']
-                                ,btn: ['Confirm', 'Cancel']
+                                ,btn: ['确定', '取消']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -148,7 +148,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit result'
+                                                        title: '提交结果'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -162,9 +162,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('Please select a row');
+                            layer.msg('请选择一行');
                         } else {
-                            layer.confirm('Confirm delete?', function (){
+                            layer.confirm('确定删除?', function (){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].mcId + ",";
@@ -177,10 +177,10 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('Successfully deleted!', {icon: 6});
+                                            layer.msg('删除成功!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
@@ -198,7 +198,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('Confirm delete?'+data.mcName, function (index) {
+                    layer.confirm('确定删除?'+data.mcName, function (index) {
                         $.ajax({
                             url: "/restaurant/membercategory/del.do",
                             type: "post",
@@ -207,10 +207,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('Successfully deleted!', {icon: 6});
+                                    layer.msg('删除成功!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: '提交结果'
                                         ,anim: 6
                                     });
                                 }
@@ -223,11 +223,11 @@
                     var url = '/restaurant/membercategory/edit.html/'+data.mcId;
                     layer.open({
                         type: 2
-                        ,title: 'Edit member type'
+                        ,title: '编辑会员类型'
                         ,content:url
                         ,maxmin: true
                         ,area: ['500px', '340px']
-                        ,btn: ['Confirm', 'Cancel']
+                        ,btn: ['确定', '取消']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -248,7 +248,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
