--- a/restaurant/src/main/resources/templates/user/EditUser.html
+++ b/restaurant/src/main/resources/templates/user/EditUser.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add member</title>
+    <title>添加用户</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -21,22 +21,22 @@
                 </div>
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Name</label>
+                        <label class="layui-form-label">姓名</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${user.name}" name="name" lay-verify="required" placeholder=""
                                    autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Sex</label>
+                        <label class="layui-form-label">性别</label>
                         <div class="layui-input-block">
                             <th:block th:if="${user.gender}=='男'">
-                                <input type="radio" name="gender" value="Male" title="Male" checked>
-                                <input type="radio" name="gender" value="Female" title="Female">
+                                <input type="radio" name="gender" value="男" title="男" checked>
+                                <input type="radio" name="gender" value="女" title="女">
                             </th:block>
                             <th:block th:if="${user.gender}=='女'">
-                                <input type="radio" name="gender" value="Male" title="Male">
-                                <input type="radio" name="gender" value="Female" title="Female" checked>
+                                <input type="radio" name="gender" value="男" title="男">
+                                <input type="radio" name="gender" value="女" title="女" checked>
                             </th:block>
                         </div>
                     </div>
@@ -45,14 +45,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Phone</label>
+                        <label class="layui-form-label">电话</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${user.phone}" name="phone" lay-verify="required|phone"
                                    placeholder="" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Email</label>
+                        <label class="layui-form-label">邮箱</label>
                         <div class="layui-input-block">
                             <input type="text" name="email" th:value="${user.email}" lay-verify="required|email"
                                    placeholder="" autocomplete="off" class="layui-input">
@@ -63,14 +63,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Birth</label>
+                        <label class="layui-form-label">生日</label>
                         <div class="layui-input-block">
                             <input type="text" id="birthday" th:value="${birthday}" name="birthday"
                                    lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Id number</label>
+                        <label class="layui-form-label">身份证号</label>
                         <div class="layui-input-block">
                             <input type="text" name="IdNumber" th:value="${user.idNumber}" placeholder=""
                                    lay-verify="identity" autocomplete="off" class="layui-input">
@@ -82,15 +82,15 @@
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
                         <div class="layui-form-text">
-                            <label class="layui-form-label">Home address</label>
+                            <label class="layui-form-label">家庭住址</label>
                             <div class="layui-input-block">
-                                <textarea name="address" th:text="${user.address}" placeholder="Please enter information"
+                                <textarea name="address" th:text="${user.address}" placeholder="请输入内容"
                                           lay-verify="required" class="layui-textarea"></textarea>
                             </div>
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Role</label>
+                        <label class="layui-form-label">角色</label>
                         <div class="layui-input-block">
                             <select name="roleId">
                                 <th:block th:each="role:${roleList}">
@@ -108,7 +108,7 @@
             </div>
             <div class="layui-form-item layui-hide">
                 <input type="button" lay-submit lay-filter="LAY-user-front-submit" id="LAY-user-front-submit"
-                       value="Confirm">
+                       value="确认">
             </div>
             </form>
     </div>
