--- a/restaurant/src/main/resources/templates/user/userInfo.html
+++ b/restaurant/src/main/resources/templates/user/userInfo.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Basic information</title>
+    <title>基本资料</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../../static/layui/css/layui.css"
           media="all"/>
     <style>
@@ -22,7 +22,7 @@
                 </div>
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Name</label>
+                        <label class="layui-form-label">姓名</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${currentUser.name}" name="name" lay-verify="required"
                                    placeholder=""
@@ -30,15 +30,15 @@
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Sex</label>
+                        <label class="layui-form-label">性别</label>
                         <div class="layui-input-block">
-                            <th:block th:if="${currentUser.gender}=='Male'">
-                                <input type="radio" name="gender" value="Male" title="Male" checked>
-                                <input type="radio" name="gender" value="Female" title="Female">
+                            <th:block th:if="${currentUser.gender}=='男'">
+                                <input type="radio" name="gender" value="男" title="男" checked>
+                                <input type="radio" name="gender" value="女" title="女">
                             </th:block>
-                            <th:block th:if="${currentUser.gender}=='Female'">
-                                <input type="radio" name="gender" value="Male" title="Male">
-                                <input type="radio" name="gender" value="Female" title="Female" checked>
+                            <th:block th:if="${currentUser.gender}=='女'">
+                                <input type="radio" name="gender" value="男" title="男">
+                                <input type="radio" name="gender" value="女" title="女" checked>
                             </th:block>
                         </div>
                     </div>
@@ -47,14 +47,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Phone</label>
+                        <label class="layui-form-label">电话</label>
                         <div class="layui-input-block">
                             <input type="text" th:value="${currentUser.phone}" name="phone" lay-verify="required|phone"
                                    placeholder="" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Email</label>
+                        <label class="layui-form-label">邮箱</label>
                         <div class="layui-input-block">
                             <input type="text" name="email" th:value="${currentUser.email}" lay-verify="required|email"
                                    placeholder="" autocomplete="off" class="layui-input">
@@ -65,14 +65,14 @@
             <div class="layui-form-item">
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Birth</label>
+                        <label class="layui-form-label">生日</label>
                         <div class="layui-input-block">
                             <input type="text" id="birthday" th:value="${birthday}" name="birthday"
                                    lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md4">
-                        <label class="layui-form-label">Id number</label>
+                        <label class="layui-form-label">身份证号</label>
                         <div class="layui-input-block">
                             <input type="text" name="IdNumber" th:value="${currentUser.idNumber}" placeholder=""
                                    lay-verify="identity" autocomplete="off" class="layui-input">
@@ -84,9 +84,9 @@
                 <div class="layui-row layui-col-space15">
                     <div class="layui-col-xs6 layui-col-sm6 layui-col-md8">
                         <div class="layui-form-text">
-                            <label class="layui-form-label">Home address</label>
+                            <label class="layui-form-label">家庭住址</label>
                             <div class="layui-input-block">
-                                <textarea name="address" th:text="${currentUser.address}" placeholder="Please enter information"
+                                <textarea name="address" th:text="${currentUser.address}" placeholder="请输入内容"
                                           lay-verify="required" class="layui-textarea"></textarea>
                             </div>
                         </div>
@@ -96,8 +96,8 @@
             <div class="layui-form-item">
                 <input type="button" class="layui-btn" lay-submit lay-filter="component-form-element"
                        id="component-form-element"
-                       value="Edit">
-                <button type="reset" class="layui-btn layui-btn-primary">Reset</button>
+                       value="修改">
+                <button type="reset" class="layui-btn layui-btn-primary">重置</button>
             </div>
         </form>
     </div>
@@ -125,10 +125,10 @@
                 data: field,
                 success: function (result) {
                     if (result.code == 200) {
-                        layer.msg("Change sucessfully!", {icon: 6});
+                        layer.msg("修改成功!", {icon: 6});
                     } else {
                         layer.alert(result.msg, {
-                            title: 'Submit resutl'
+                            title: '提交结果'
                             , anim: 6
                         });
                     }
