--- a/restaurant/src/main/resources/templates/user/userList.html
+++ b/restaurant/src/main/resources/templates/user/userList.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Worker list</title>
+    <title>员工列表</title>
     <link rel="stylesheet" th:href="@{/layuiadmin/layui/css/layui.css}" href="../static/layuiadmin/layui/css/layui.css"
           media="all"/>
     <link rel="stylesheet" th:href="@{/layuiadmin/style/admin.css}" href="../static/layuiadmin/layui/css/layui.css"
@@ -19,44 +19,44 @@
         <div class="layui-form layui-card-header layuiadmin-card-header-auto">
             <div class="layui-form-item">
                 <div class="layui-inline">
-                    <label class="layui-form-label">Query conditions</label>
+                    <label class="layui-form-label">查询条件</label>
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" name="loginCode" id="loginCode" placeholder="Account" autocomplete="off" class="layui-input">
+                        <input type="text" name="loginCode" id="loginCode" placeholder="账号" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" name="name" id="name" placeholder="Name"  autocomplete="off" class="layui-input">
+                        <input type="text" name="name" id="name" placeholder="姓名"  autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" name="idNumber" placeholder="Id number" autocomplete="off" class="layui-input">
+                        <input type="text" name="idNumber" placeholder="身份证号" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width:100px;">
-                        <input type="text" id="test1" lay-key="1" name="birthday" placeholder="Birth" autocomplete="off" class="layui-input">
+                        <input type="text" id="test1" lay-key="1" name="birthday" placeholder="生日" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width: 150px">
-                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">Sex</label>
+                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">性别</label>
                         <div class="layui-input-block" style="margin-left:50px;">
                             <select name="gender">
-                                <option value="">No limit</option>
-                                <option value="男">Male</option>
-                                <option value="女">Female</option>
+                                <option value="">不限</option>
+                                <option value="男">男</option>
+                                <option value="女">女</option>
                             </select>
                         </div>
                     </div>
                 </div>
                 <div class="layui-inline">
                     <div class="layui-input-inline" style="width: 180px">
-                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">Role</label>
+                        <label class="layui-form-label" style="width:40px;;padding: 9px 0px">角色</label>
                         <div class="layui-input-block" style="margin-left:50px;">
                             <select name="roleId">
-                                <option value="">No limit</option>
+                                <option value="">不限</option>
                                 <th:block th:each="role:${roleList}">
                                     <option th:value="${role.roleId}" th:text="${role.roleName}"></option>
                                 </th:block>
@@ -88,9 +88,9 @@
             <table id="tableList" lay-filter="tableList"></table>
             <!--右边工具栏-->
             <script type="text/html" id="barDemo">
-                <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="resetPwd">Reset password</a>
-                <a class="layui-btn layui-btn-xs" lay-event="edit">Edit</a>
-                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">Delete</a>
+                <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="resetPwd">重置密码</a>
+                <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+                <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
             </script>
         </div>
     </div>
@@ -123,17 +123,17 @@
                 , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'userId', title: 'ID',align:'center', width:160, sort: true, fixed: 'left',sort: true,hide:true}
-                    , {field: 'loginCode', title: 'Account',align:'center', width: 150}
-                    , {field: 'name', title: 'Name',align:'center', width: 100, sort: true}
-                    , {field: 'gender', title: 'Sex',align:'center', width: 100,}
-                    , {field: 'phone', title: 'Phone',align:'center', width: 160,sort: true}
-                    , {field: 'email', title: 'Email',align:'center', width: 200}
-                    , {field: 'birthday', title: 'Birth',align:'center', width: 150}
-                    , {field: 'idNumber', title: 'Id number',align:'center', width: 200}
-                    , {field: 'address', title: 'Home address',align:'center', width: 160, sort: true}
+                    , {field: 'loginCode', title: '账号',align:'center', width: 150}
+                    , {field: 'name', title: '姓名',align:'center', width: 100, sort: true}
+                    , {field: 'gender', title: '性别',align:'center', width: 100,}
+                    , {field: 'phone', title: '电话',align:'center', width: 160,sort: true}
+                    , {field: 'email', title: '邮箱',align:'center', width: 200}
+                    , {field: 'birthday', title: '生日',align:'center', width: 150}
+                    , {field: 'idNumber', title: '身份证号',align:'center', width: 200}
+                    , {field: 'address', title: '家庭住址',align:'center', width: 160, sort: true}
                     /*取嵌套json数据用模板 templet: '<div>{{d.role.roleName}}</div>'*/
-                    , {field: 'role', title: 'Role',align:'center', width: 100, templet: '<div>{{d.role.roleName}}</div>'}
-                    , {fixed: 'right', title: "Toolbar",align:'center', width: 200, toolbar: '#barDemo'}
+                    , {field: 'role', title: '角色',align:'center', width: 100, templet: '<div>{{d.role.roleName}}</div>'}
+                    , {fixed: 'right', title: "工具栏",align:'center', width: 200, toolbar: '#barDemo'}
                 ]]
             });
 
@@ -145,11 +145,11 @@
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: 'Add user'
+                            ,title: '添加用户'
                             ,content: '/restaurant/user/adduser.html'
                             ,maxmin: true
                             ,area: ['700px', '510px']
-                            ,btn: ['Confirm', 'Cancel']
+                            ,btn: ['确定', '取消']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
                                     //该id是窗口打开html页面中表单提交按钮的id
@@ -171,7 +171,7 @@
                                                 layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit result'
+                                                    title: '提交结果'
                                                     ,anim: 6
                                                 });
                                             }
@@ -184,19 +184,19 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('Please select a row');
+                            layer.msg('请选择一行');
                         } else if (data.length > 1) {
-                            layer.msg('Only can edit once');
+                            layer.msg('只能同时编辑一个');
                         } else {
                             var userId = checkStatus.data[0].userId;
                             var url = '/restaurant/user/edituser.html/'+userId;
                             layer.open({
                                 type: 2
-                                ,title: 'edit user'
+                                ,title: '编辑用户'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['700px', '460px']
-                                ,btn: ['Confirm', 'Cancel']
+                                ,btn: ['确定', '取消']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
@@ -217,7 +217,7 @@
                                                     layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit result'
+                                                        title: '提交结果'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -231,9 +231,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('Please select a row');
+                            layer.msg('请选择一行');
                         } else {
-                            layer.confirm('Confirm delete?', function (){
+                            layer.confirm('确定删除?', function (){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].userId + ",";
@@ -246,10 +246,10 @@
                                     success: function(result) {
                                         if(result.code == 200) {
                                             table.reload('tableList'); //数据刷新
-                                            layer.msg('Sucessfully deleted!', {icon: 6});
+                                            layer.msg('删除成功!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
@@ -267,16 +267,16 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'resetPwd') {
-                    layer.confirm('Confirm reset user【'+data.name+'】password?', function (index) {
+                    layer.confirm('确定要重置用户【'+data.name+'】的密码?', function (index) {
                         $.ajax({
                             url: "/restaurant/user/resetpwd/"+data.userId,
                             dataType: "JSON",
                             success: function(result) {
                                 if(result.code == 200) {
-                                    layer.msg('Sucessfully reset!', {icon: 6});
+                                    layer.msg('重置成功!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: '提交结果'
                                         ,anim: 6
                                     });
                                 }
@@ -286,7 +286,7 @@
                     });
 
                 } else if (layEvent === 'del') {
-                    layer.confirm('Confirm delete?'+data.name, function (index) {
+                    layer.confirm('确定删除?'+data.name, function (index) {
                         $.ajax({
                             url: "/restaurant/user/del.do",
                             type: "post",
@@ -295,10 +295,10 @@
                             success: function(result) {
                                 if(result.code == 200) {
                                     obj.del(); //删除对应行（tr）的DOM结构
-                                    layer.msg('Sucessfully deleted!', {icon: 6});
+                                    layer.msg('删除成功!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit result'
+                                        title: '提交结果'
                                         ,anim: 6
                                     });
                                 }
@@ -311,11 +311,11 @@
                     var url = '/restaurant/user/edituser.html/'+data.userId;
                     layer.open({
                         type: 2
-                        ,title: 'Edit user'
+                        ,title: '编辑用户'
                         ,content:url
                         ,maxmin: true
                         ,area: ['750px', '460px']
-                        ,btn: ['Confirm', 'Cancel']
+                        ,btn: ['确定', '取消']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
@@ -336,7 +336,7 @@
                                             layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit result'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
